# cookiecutter-python-app

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  cookiecutter.json  requirements-dev.txt  requirements-test.txt  requirements.txt  test.bash  test.py
.github/: dependabot.yml
tests/: .gitignore  pytest.ini  requirements.txt  (+2 more)
{{cookiecutter.project_slug}}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/doc/: .gitignore  conf.py  index.rst
{{cookiecutter.project_slug}}/docs/: .gitignore  conf.py  index.rst
{{cookiecutter.project_slug}}/etc/: config.toml  config.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.app_name}}/: __init__.py  __main__.py  __version__.py  cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.app_name}}/api/: __init__.py  cmd1.py  cmd2.py  hello.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.app_name}}/core/: __init__.py  config.py  logger.py
{{cookiecutter.project_slug}}/test/: .gitignore  requirements.txt
{{cookiecutter.project_slug}}/test/data/: conf2.yml
{{cookiecutter.project_slug}}/test/{{cookiecutter.app_name}}/: test_api.py  test_cli.py
{{cookiecutter.project_slug}}/test/{{cookiecutter.app_name}}/core/: test_config.py  test_logger.py
{{cookiecutter.project_slug}}/tests/assets/: conf1.toml  conf1.yml  conf2.toml
{{cookiecutter.project_slug}}/tests/unit/: test_api.py
{{cookiecutter.project_slug}}/tests/unit/core/: test_config.py
(+68 files in other folders)
