[project]
name = "{{ cookiecutter.app_name }}"
description = "Execute CLI commands via a REST API."
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv==1.0.0",
    "PyYAML==6.0",
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "{{ cookiecutter.project_url }}"

[project.scripts]
{{ cookiecutter.app_name }} = "{{ cookiecutter.app_name }}.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8",
    "sphinx>=6.2.1,<7",
    "sphinx_rtd_theme>=1.2.1,<2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.app_name }}.__version__"}
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src"]
